--- a/lesson2/design.css
+++ b/lesson2/design.css
@@ -8,9 +8,12 @@
   }
   @media screen and (min-width: 580px){
     .main-grid{
-      /*display: grid;
-      grid-template-columns: 1fr 1fr;*/
-      flex-direction: column;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      
+    }
+    .main-grid img{
+      grid-template-columns: 1fr;
     }
   }
   @media screen and (min-width: 800px){
