--- a/lesson03/css/site-plan.css
+++ b/lesson03/css/site-plan.css
@@ -23,3 +23,14 @@ header{
 body{
   font-family: 'Times New Roman';
 }
+.bruce img{
+  max-width: 640px;
+  max-height: 480px;
+}
+.lex img{
+  max-width: 640px;
+  max-height: 480px;
+}
+.lex h4{
+  font-size: larger;
+}
