--- a/lesson03/css/site-plan.css
+++ b/lesson03/css/site-plan.css
@@ -1,10 +1,16 @@
 header li{
-    float:right;
+    /* float:right; */
+    float: inline-end;
 }
 header a{
   display: block;
   padding: 8px;
-  background-color: #dddddd;
+  background-color: #3A3634;
+  color: #C2AE9F;
+}
+
+header{
+  background-color: #3A3634;
 }
 
 header ul{
@@ -12,7 +18,8 @@ header ul{
 }
 
 header{
-  background-color: darkgray;
+  background-color: #3A3634;
+  color: #C2AE9F;
   font-family: 'Times New Roman';
 }
 
@@ -22,9 +29,10 @@ header{
 }
 body{
   font-family: 'Times New Roman';
+  display: flexbox;
 }
 .bruce img{
-  max-width: 640px;
+  max-width: 600px;
   max-height: 480px;
 }
 .lex img{
@@ -47,4 +55,26 @@ font-size: larger;
 }
 .color4{
   font-size:xx-large;
+  color: darkgray;
+}
+
+.home-page{
+  background-color: darkgray;
+}
+
+.bruce{
+  display: flex;
+}
+.lex{
+  display: flex;
+}
+
+@media only screen and (min-width: 768px){
+  header li{
+    float: right;
+    
+  }
+  header ul{
+    display: flex;
+  }
 }
