--- a/chamber/css/chamber.css
+++ b/chamber/css/chamber.css
@@ -51,6 +51,10 @@ footer{
 footer a{
     color:#C2AE9F;
 }
+footer img{
+    max-width: 115px;
+    max-height: auto;
+}
 .main{
     display: flex;
     flex-direction: column;
