--- a/chamber/css/chamber.css
+++ b/chamber/css/chamber.css
@@ -83,10 +83,7 @@ body{
     align-self: center;
 }
 
-.join-form{
-    display: flex;
-}
-
-.form-join{
-    justify-items: center;
+#form-join{
+    text-align: center;
+    
 }
