--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -13,5 +13,17 @@
         grid-column: 3/4;
         grid-row-start: 2;
     }
+    .direct-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .direct-grid section{
+        background-color: aliceblue;
+        margin: 1em;
+        text-align: center;
+    }
+    #direct-head{
+        text-align: center;
+    }
     
 }
