--- a/chamber/css/chamber.css
+++ b/chamber/css/chamber.css
@@ -4,6 +4,53 @@
     background-color: #3A3634;
     color: #C2AE9F;
 } */
+/* Small/Phone View ***************/
+/* nav {
+	margin: 0 auto;
+	max-width: 760px;
+	background-color: tomato; 
+}*/
+.navigation {
+	list-style: none;
+	padding: 0;
+}
+.navigation li:first-child {
+	display: block;
+}
+.navigation li {
+	display: none;
+}
+.navigation a {
+	display: block;
+	padding: 0.75rem;
+	/* text-align: left; */
+	text-decoration: none;
+	/* color: black; */
+	font-weight: 700;
+	transition: 0.5s;
+	font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+
+.navigation a.ham::before {
+	content: "🍔 ";
+}
+
+.navigation a:hover {
+	color: white;
+	background-color: black;
+}
+
+/* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the responsive class is added to the end of the class list like this in HTML.
+  <ul class="navigation responsive">
+*/
+.responsive li {
+	display: block;
+}
+
+.responsive a.ham::before {
+	content: "❌ ";
+}
+
 header {
     display: grid;
     grid-template-columns: 270px 1fr;
@@ -34,6 +81,9 @@ header img{
     max-width: 115px;
     max-height: auto;
     align-self: center;
+}
+.navigation{
+
 }
 header nav{
     align-self: center;
