--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -20,4 +20,17 @@
     #direct-head{
         text-align: center;
     }
+    .navigation {
+		display: flex;
+	}
+	.navigation li {
+		display: block; /* change state in small view */
+		flex: 1 1 auto;
+	}
+	.navigation a {
+		text-align: center;
+	}
+	.navigation li:first-child {
+		display: none;
+	}
 }
