--- a/chamber/css/chamber.css
+++ b/chamber/css/chamber.css
@@ -32,12 +32,13 @@
 }
 
 .navigation a.ham::before {
-	content: "🍔 ";
+	content: "☰";
+    text-align: right;
 }
 
 .navigation a:hover {
 	color: white;
-	background-color: black;
+	/* background-color: black; */
 }
 
 /* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the responsive class is added to the end of the class list like this in HTML.
