--- a/chamber/css/chamber.css
+++ b/chamber/css/chamber.css
@@ -140,7 +140,8 @@ body{
 }
 
 .direct-grid section{
-    background-color: aliceblue;
+    background-color: black;
+    color: gray;
     margin: 1em;
     text-align: center;
 }
