--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -21,7 +21,7 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
     .direct-grid section{
-        background-color: aliceblue;
+        background-color: black;
         margin: 1em;
         text-align: center;
     }
