--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -13,7 +13,7 @@
         grid-template-columns: 1fr 1fr;
     }
     .direct-grid section{
-        background-color: aliceblue;
+        background-color: black;
         margin: 1em;
         text-align: center;
     }
