--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -34,6 +34,10 @@
     }
     #gotham-pics{
         grid-column-start: 3;
+
+    }
+    #gotham-pics section img{
+        text-align: end;
     }
     
 }
