--- a/css/index.css
+++ b/css/index.css
@@ -5,10 +5,10 @@ header{
     text-align: center;
     font-size: x-large;
 }
-img{
-    width: 40%;
+header img{
+    width: 322px;
     height: auto;
-    align-content: left;
+    text-align: left;
 }
 
 footer{
@@ -19,8 +19,12 @@ footer{
     color: cornsilk;
 }
 
-h1{
+header h1{
     grid-column: 2/3;
-    grid-row: 2/3;
+    grid-row-start: 1;
 }
 
+header h2{
+    grid-column: 2/3;
+    grid-row-start: 2;
+}
