--- a/ranch/css/large.css
+++ b/ranch/css/large.css
@@ -1,5 +1,9 @@
 @media only screen and (min-width: 1028px) {
 
+    main{
+        max-width: 75rem;
+        margin: auto;
+    }
     nav ul{
         padding-left: 2%;
     }
@@ -15,4 +19,7 @@
         width: 31%;
     }
 
+    div.news{
+        column-count: 3;
+    }
 }  /* end of query */
