--- a/chamber/css/chamber.css
+++ b/chamber/css/chamber.css
@@ -145,6 +145,9 @@ body{
     margin: 1em;
     text-align: center;
 }
+.direct-grid a{
+    color: white;
+}
 #direct-head{
     text-align: center;
 }
