--- a/hotel/css/base.css
+++ b/hotel/css/base.css
@@ -1,3 +1,37 @@
-body{
-    font-family: "Roboto";
+.navbar{
+    background-color: cornflowerblue;
+    border-radius: 30px;
+    
+}
+.navbar ul{
+    overflow: auto;
+}
+.navbar li{
+    float:left;
+    list-style: none; 
+    margin: 13px 20px;
+    
+}
+.navbar li a{
+    padding: 3px 3px;
+    text-decoration: none;
+    color: white;
+}
+.navbar li a:hover{
+    color: purple;
+}
+.header-social{
+    float: right;
+    color: white;
+    padding: 12px 75px;
+} 
+.navbar input{
+    border: 2px solid black;
+    border-radius: 14px;
+    padding: 3px 17px;
+    width: 129px;
+}
+.header-social a img{
+    width: 50px;
+    justify-self: start;
 }
